[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/pixel_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Resources/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://Resources/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/DeathScreen.gd" type="Script" id=4]

[node name="DeathScreen" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = 200.0
margin_right = -400.0
margin_bottom = -200.0
theme = ExtResource( 2 )
custom_fonts/title_font = ExtResource( 3 )
custom_colors/title_color = Color( 0.439216, 0.501961, 0.156863, 1 )
custom_constants/title_height = -309
window_title = "You died!"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 150.686
margin_top = 232.184
margin_right = 913.686
margin_bottom = 288.184
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "You reached level "
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 407.0
margin_top = 325.0
margin_right = 677.0
margin_bottom = 610.0
custom_constants/separation = 21
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Button" parent="VBoxContainer"]
margin_right = 270.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 270.0
margin_bottom = 183.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseGame" type="Button" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 270.0
margin_bottom = 285.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Close Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="." to="." method="_on_DeathScreen_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_DeathScreen_popup_hide"]
[connection signal="button_down" from="VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_button_down"]
[connection signal="button_down" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_button_down"]
[connection signal="button_down" from="VBoxContainer/CloseGame" to="." method="_on_CloseGame_button_down"]
